--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "openai": "^6.16.0",
     "prisma": "^4.15.0",
     "stripe": "^20.1.2"
