feat(payment): switch to Stripe Checkout + webhook; add Stripe docs and env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,11 +18,13 @@ OPENAI_API_KEY=your_openai_api_key
 EMAIL_USER=your_email@example.com
 EMAIL_PASS=your_email_password
 
-# Payoneer
-# Template must include {token} placeholder which will be replaced by server.
-PAYONEER_CHECKOUT_URL_TEMPLATE=https://link.payoneer.com/Token?t={token}&src=wpl
-# Or use base URL only and server will append ?t={token}
-# PAYONEER_BASE_URL=https://link.payoneer.com/Token
-
-# Webhook secret configured in Payoneer dashboard
-PAYONEER_WEBHOOK_SECRET=replace_with_webhook_secret
+# Stripe
+# Use Stripe test keys for sandbox, then replace with live keys for production.
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_PUBLISHABLE_KEY=pk_test_...
+# Webhook signing secret from Stripe (reveal after creating endpoint)
+STRIPE_WEBHOOK_SECRET=whsec_...
+# Frontend redirect URLs (optional)
+FRONTEND_URL=https://your-frontend.example.com
+STRIPE_SUCCESS_URL=${FRONTEND_URL}?success=true
+STRIPE_CANCEL_URL=${FRONTEND_URL}?canceled=true
