--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,37 @@
-# Example environment variables for backend (do NOT commit secrets into repo)
-# Copy this file to .env locally for development, and set real secrets in Render dashboard for production.
+# Backend Environment Variables
+# Copy this file to .env and fill in your actual values
 
-# Database
-DATABASE_URL=postgresql://user:pass@host:5432/dbname
+# Database (Render will provide this automatically)
+DATABASE_URL=postgresql://user:password@host:5432/dbname
 
-# JWT
-JWT_SECRET=your_jwt_secret_here
+# JWT Secret (use a strong random string)
+JWT_SECRET=your_super_secret_jwt_key_change_this
 
-# Google OAuth (optional)
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+# OpenAI API Key
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# OpenAI
-OPENAI_API_KEY=your_openai_api_key
+# Stripe Keys
+# Get from: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+STRIPE_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+STRIPE_WEBHOOK_SECRET=whsec_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-# Email (nodemailer) - optional
-EMAIL_USER=your_email@example.com
-EMAIL_PASS=your_email_password
-
-# Stripe
-# Use Stripe test keys for sandbox, then replace with live keys for production.
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_PUBLISHABLE_KEY=pk_test_...
-# Webhook signing secret from Stripe (reveal after creating endpoint)
-STRIPE_WEBHOOK_SECRET=whsec_...
-# Frontend redirect URLs (optional)
-FRONTEND_URL=https://your-frontend.example.com
+# Frontend URL (your Vercel deployment URL)
+FRONTEND_URL=https://your-app.vercel.app
 STRIPE_SUCCESS_URL=${FRONTEND_URL}?success=true
 STRIPE_CANCEL_URL=${FRONTEND_URL}?canceled=true
+
+# Email (optional - for password reset)
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASS=your_app_password
+
+# Google OAuth (optional)
+GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Port (optional, default 5000)
+PORT=5000
+
+# Currency (optional, default usd)
+CURRENCY=usd
