--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
+    "@paddle/paddle-node-sdk": "^3.5.0",
     "@prisma/client": "^4.15.0",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.0",
@@ -19,7 +20,6 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "openai": "^6.16.0",
-    "prisma": "^4.15.0",
-    "stripe": "^20.1.2"
+    "prisma": "^4.15.0"
   }
 }
